<!--
  Copyright 2011 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">Android Quiz Template</string>
    <string name="alternate_title">An alternate title that is long</string>
    <string name="toggle_title">Toggle title</string>
    <string name="error_message">Wrong, try again.</string>
    <string name="hello">Hello, Hallo</string>
    <string name="settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_other_apps">More Apps</string>
    <string name="menu_buy">Buy Dictionary</string>
    <string name="connecting_store">Connecting to store ...</string>
    
</resources>
