<!--
  Copyright 2011 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- action bar menu android:showAsAction="always" -->
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_settings"
        android:visible="false"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_refresh"
        android:visible="false"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="0"
        android:showAsAction="never"
        android:title="@string/menu_search"
        android:visible="false"/>

    <!-- pop up menu -->
    <item
        android:id="@+id/menu_reset"
        android:icon="@drawable/ic_menu_reset"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_reset"/>
    <item
        android:id="@+id/menu_other_apps"
        android:icon="@drawable/ic_menu_other_apps"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_other_apps"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_share"
        android:visible="false"/>

    <!-- this menu is always invisible and just needed by Version < HoneyComb to show the menu as in >= HoneyComb -->
    <item
        android:id="@+id/menu_menu"
        android:icon="@drawable/ic_action_menu"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menu_menu"
        android:visible="false"/>

</menu>